# BricksDB

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.gihub/workflow/: check_tests.yml
.github/workflows/: check_tests.yml
include/csv/: csv_batcher.h  csv_reader.h  csv_writer.h
include/scheme/: batch.h  column.h  overloaded.h  scheme.h  type.h
include/transform/: columnar_to_csv.h  csv_to_columnar.h  metadata.h
script/: format.sh  sdfsdf.sh  tidy.sh
src/: CMakeLists.txt
src/csv/: CMakeLists.txt  csv_batcher.cpp  csv_reader.cpp  csv_writer.cpp
src/scheme/: CMakeLists.txt  batch.cpp  column.cpp  scheme.cpp  type.cpp
src/transform/: CMakeLists.txt  columnar_to_csv.cpp  csv_to_columnar.cpp  metadata.cpp
tests/: CMakeLists.txt
tests/csv/: CMakeLists.txt  csv_batcher_test.cpp  csv_reader_test.cpp  csv_writer_test.cpp  test_data.csv
tests/transform/: CMakeLists.txt  columnar_to_csv_test.cpp  csv_to_columnar_test.cpp  transform_test.cpp
