add_executable(csv_to_columnar_test csv_to_columnar_test.cpp)
target_include_directories(csv_to_columnar_test PUBLIC ${CMAKE_SOURCE_DIR}/include/)
target_link_libraries(csv_to_columnar_test csv_to_columnar)
add_test(NAME csv_to_columnar_test COMMAND csv_to_columnar_test)

add_executable(columnar_to_csv_test columnar_to_csv_test.cpp)
target_include_directories(columnar_to_csv_test PUBLIC ${CMAKE_SOURCE_DIR}/include/)
target_link_libraries(columnar_to_csv_test columnar_to_csv)
add_test(NAME columnar_to_csv_test COMMAND columnar_to_csv_test)